Bug 1638130 - Move <vector> where std::vector moved after bug 1635362. r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D75561